syntax = "proto3";

//package name
package greet;

// the name of the package for the generated code
// we can import with this string
// github.com/Clement-Jean/grpc-go-courseはモジュール名
// このディレクトリにprotocolファイルが作られるかつこの名前のパッケージ名で登録される
// go⇒モジュール名を認識できる, protoc⇒認識できないため明記
// わざわざこのようにモジュール名をパスに入れる理由として外部に公開するときにpackageのパス名をしっかりとしておくため
option go_package = "github.com/Clement-Jean/grpc-go-course/greet/proto";


message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet (GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes (GreetRequest) returns (stream GreetResponse);
  rpc LongGreet (stream GreetRequest) returns (GreetResponse);
  rpc GreetEveryone (stream GreetRequest) returns (stream GreetResponse);
  rpc GreetWithDeadline (GreetRequest) returns (GreetResponse);
}